Finished DriveDistance implementation with path following (needs testing)